<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/editItem"
          android:icon="@drawable/edititem"
          android:title="@string/menu_edit" />
    <item android:id="@+id/newItem"
          android:icon="@drawable/newitem"
          android:title="@string/menu_new" />
    <item android:id="@+id/sendItem"
          android:icon="@drawable/send"
          android:title="@string/menu_send" />
    <item android:id="@+id/deleteItem"
          android:icon="@drawable/deleteitem"
          android:title="@string/menu_delete" />

    <item android:id="@+id/help"
          android:icon="@drawable/help"
          android:title="@string/menu_help" />
    <item android:id="@+id/preferences"
          android:icon="@drawable/preferences"
          android:title="@string/menu_preferences" />
</menu>