<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_flipper"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@drawable/activitybase"
    >
    <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        >
        <!-- Select Person And Location -->
        <TableLayout
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          >
          <TableRow>
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_where"
               />
              <Spinner
                android:id="@+id/locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            </LinearLayout>
            <Button android:id="@+id/add_location"
              android:layout_weight="1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerInParent="true"
              android:text="+"
              android:textSize="20sp"
              android:layout_marginTop="20sp"
             />
          </TableRow>
          <TableRow>
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        >
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/new_who"
            />
              <Spinner
                android:id="@+id/persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            </LinearLayout>
            <Button android:id="@+id/add_person"
              android:layout_weight="1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerInParent="true"
              android:text="+"
              android:textSize="20sp"
              android:layout_marginTop="20sp"
             />
          </TableRow>
        </TableLayout>
      </LinearLayout>
      <Button android:id="@+id/next_select_time"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_next_select_time"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
       />
    </RelativeLayout>


    <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
      <!-- Set Time and Date -->
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="left|center"
          >
          <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            >
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left|center"
              >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_when"
               />
              <TimePicker
                android:id="@+id/begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            </LinearLayout>
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left|center"
              >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
               />
              <DatePicker
                android:id="@+id/begin_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            </LinearLayout>
          </LinearLayout>
          <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            >
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="right|top"
              >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_when_relative"
               />
              <TimePicker
                android:id="@+id/begin_time_relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
            </LinearLayout>
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="right|center"
              >
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/begin_date_display"
                android:textSize="25sp"
               />
              <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/begin_time_display"
                android:textSize="25sp"
               />
            </LinearLayout>
          </LinearLayout>
        </LinearLayout>
      </LinearLayout>
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        >
        <Button android:id="@+id/prev_select_location"
          android:layout_weight="1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:text="@string/new_prev_select_location"
          android:textSize="20sp"
         />
        <Button android:id="@+id/next_add_info"
          android:layout_weight="1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:text="@string/new_next_add_info"
          android:textSize="20sp"
         />
        <Button android:id="@+id/finish_quick"
          android:layout_weight="1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:text="@string/new_quickfinish"
          android:textSize="20sp"
         />
      </LinearLayout>
    </RelativeLayout>





    <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:screenOrientation="portrait"
      >
      <!-- Text and Description -->
      <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        >
        <TextView
         android:id="@+id/begin_time_display_info"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text=""
         android:textSize="20sp"
        />
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/new_name"
         />
        <EditText
          android:id="@+id/name"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@android:drawable/editbox_background"
         />

        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/new_description"
         />
        <EditText
          android:id="@+id/description"
          android:lines="3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:background="@android:drawable/editbox_background"
         />
      </LinearLayout>
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        >
        <Button android:id="@+id/prev_select_time"
          android:layout_weight="1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:text="@string/new_prev_select_time"
          android:textSize="20sp"
         />
        <Button android:id="@+id/finish_activity"
          android:layout_weight="1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerInParent="true"
          android:text="@string/new_finish"
          android:textSize="20sp"
         />
       </LinearLayout>
    </RelativeLayout>
</ViewFlipper>
